init update phrase

--- a/views/admin/phrases/all.ejs
+++ b/views/admin/phrases/all.ejs
@@ -83,7 +83,7 @@
                                                 105 V
                                             </td>
                                             <td class="d-flex justify-content-between align-items-center" style="height: 100px;">
-                                                <a href="/admin/phrase/<%= phrase.id %>"><i class="fas fa-edit text-info"></i></a>
+                                                <a href="/admin/phrases/<%= phrase.id %>"><i class="fas fa-edit text-info"></i></a>
                                                 <form method="post" action="/admin/phrases/delete/<%= phrase.id %>?_method=DELETE">
                                                     <input type="hidden" name="_method" value="DELETE">
                                                     <button type="submit" style="background-color: transparent; border: none;" id="myEditButton">
