--- a/views/admin/phrases/update.ejs
+++ b/views/admin/phrases/update.ejs
@@ -7,11 +7,11 @@
             <div class="card border-left-secondary shadow h-100 py-2">
 
                 <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
-                    <h6 class="m-0 font-weight-bold">Crea FRASE</h6>
+                    <h6 class="m-0 font-weight-bold">Modifica FRASE</h6>
                 </div>
 
                 <div class="card-body">
-                    <form action="/admin/phrases/create" method="POST">
+                    <form action="/admin/phrases/<%= phrase.id %>" method="POST">
                         <div class="form-group">
                             <label for="text">Frase <span class="text-danger">*</span></label>
                             <!-- <input type="text" class="form-control" > -->
