--- a/views/admin/phrases/all.ejs
+++ b/views/admin/phrases/all.ejs
@@ -51,6 +51,7 @@
                                         <th>Citato da ...</th>
                                         <th>Data pubblicazione</th>
                                         <th>Likes</th>
+                                        <th>Stato</th>
                                         <th>Azioni</th>
                                     </tr>
                                 </thead>
@@ -75,7 +76,7 @@
                                                         <i class="fas fa-times text-dark"></i>
                                                         <% } %>
                                             </td>
-                                            <td style="width: 15%;">
+                                            <td style="width: 10%;">
 
                                                 <% if (phrase.quotedById) { %>
                                                     <a href="/admin/people/<%= phrase.quotedById %>" class='linkQuoted' data-color="<%= phrase.quotationMarksColor %>">
@@ -91,10 +92,17 @@
                                             <td>
                                                 <%= phrase.date %>
                                             </td>
-                                            <td>
+                                            <td style="width: 5%;">
                                                 105 V
                                             </td>
-                                            <td class="d-flex justify-content-between align-items-center" style="height: 100px;">
+                                            <td style="width: 3%;">
+                                                <% if (phrase.isFinished == 1) { %>
+                                                    <i class="fas fa-globe-europe"></i>
+                                                    <% } else { %>
+                                                        <i class="fas fa-lock"></i>
+                                                        <% } %>
+                                            </td>
+                                            <td class="d-flex justify-content-between align-items-center" style="height: 180px;">
                                                 <a href="/admin/phrases/<%= phrase.id %>"><i class="fas fa-edit text-info"></i></a>
                                                 <form method="post" action="/admin/phrases/delete/<%= phrase.id %>?_method=DELETE">
                                                     <input type="hidden" name="_method" value="DELETE">
