delete s3 obj implemented

--- a/views/admin/phrases/update.ejs
+++ b/views/admin/phrases/update.ejs
@@ -81,8 +81,8 @@
                 </div>
                 <div class="card-footer">
                     <div id="input-group">
-                        <button type="submit" class="btn btn-primary mb-2"><i class="fas fa-check"></i> |Conferma creazione</button>
-                        <button type="submit" class="btn btn-dark mb-2"><i class="far fa-save"></i> | Salva come bozza</button>
+                        <button type="submit" class="btn btn-primary"><i class="fas fa-check"></i> | Conferma creazione</button>
+                        <!-- <button type="submit" class="btn btn-dark"><i class="far fa-save"></i> | Salva come bozza</button> -->
                     </div>
                     </form>
                 </div>
