--- a/views/admin/phrases/create.ejs
+++ b/views/admin/phrases/create.ejs
@@ -20,7 +20,7 @@
 
                         <div class="input-group mb-3">
                             <div class="input-group-prepend">
-                                <label class="input-group-text" for="quotedById">Citatato da ...&nbsp;<span class="text-danger">*</span></label>
+                                <label class="input-group-text" for="quotedById">Citatato da ...</label>
                             </div>
                             <select class="custom-select" name="quotedById" id="quotedById" onchange="checkValue(this.value)">
                                 <option value="" selected>Nessuno ...</option>
@@ -52,8 +52,8 @@
                                 <span class="input-group-text" id="inputFile"><i class="fas fa-upload"></i></span>
                             </div>
                             <div class="custom-file">
-                                <input type="file" class="custom-file-input" name="myImg" id="myImg" aria-describedby="inputFile">
-                                <label class="custom-file-label" for="myImg">Selezione l'immagine</label>
+                                <input type="file" class="custom-file-input" name="image" id="image" aria-describedby="inputFile">
+                                <label class="custom-file-label" for="image">Selezione l'immagine</label>
                             </div>
                         </div>
                         <!-- aggiungere il nome del file caricato -->
@@ -82,8 +82,8 @@
                 </div>
                 <div class="card-footer">
                     <div id="input-group">
-                        <button type="submit" class="btn btn-primary mb-2"><i class="fas fa-check"></i> |Conferma creazione</button>
-                        <button type="submit" class="btn btn-dark mb-2"><i class="far fa-save"></i> | Salva come bozza</button>
+                        <button type="submit" class="btn btn-primary"><i class="fas fa-check"></i> | Conferma creazione</button>
+                        <!-- <button type="submit" class="btn btn-dark mb-2"><i class="far fa-save"></i> | Salva come bozza</button> -->
                     </div>
                     </form>
                 </div>
