--- a/views/admin/phrases/create.ejs
+++ b/views/admin/phrases/create.ejs
@@ -22,7 +22,7 @@
                             <div class="input-group-prepend">
                                 <label class="input-group-text" for="quotedById">Citatato da ...</label>
                             </div>
-                            <select class="custom-select" name="quotedById" id="quotedById" onchange="checkValue(this.value)">
+                            <select class="custom-select" name="quotedById" id="quotedById">
                                 <option value="" selected>Nessuno ...</option>
                                 <% quotedById.forEach(person => { %>
                                     <!-- aggiungere l'immagine della persona !!-->
@@ -52,17 +52,19 @@
                                 <span class="input-group-text" id="inputFile"><i class="fas fa-upload"></i></span>
                             </div>
                             <div class="custom-file">
-                                <input type="file" class="custom-file-input" name="image" id="image" aria-describedby="inputFile">
+                                <input type="file" class="custom-file-input" name="image" id="image" onchange="checkFile(this)" aria-describedby="inputFile">
                                 <label class="custom-file-label" for="image">Selezione l'immagine</label>
                             </div>
                         </div>
-                        <!-- aggiungere il nome del file caricato -->
 
+                        <div class="col-12 d-flex justify-content-center align-items-end">
+                            <div class="col-xl-10 col-lg-12 mb-3">
+                                <img id="imagePreview" src="#" style="width: 100%;" hidden>
+                            </div>
 
-                        <!-- <div class="input-group">
-                            <label class="custom-control-label" for="statusSwitch">Da pubblicare? </label>
-                            <input type="checkbox" class="custom-control-input" id="statusSwitch">
-                        </div> -->
+                            <i class="fas fa-trash text-primary fa-2x mb-3" id="btnDeleteImage" onclick="deleteImage()" hidden></i>
+                        </div>
+
 
                         <div class="input-group">
                             <div class="custom-control custom-switch">
@@ -72,12 +74,9 @@
                         </div>
 
 
-
                         <div class="form-group mt-5 mb-0">
                             <span class="text-danger">*</span> È obbligatorio!
                         </div>
-
-
 
                 </div>
                 <div class="card-footer">
@@ -91,5 +90,7 @@
             </div>
 
         </div>
+
+        <script src="/js/admin/imageLoad.js"></script>
 
         <%- include('./../partials/footer') %>
