--- a/views/admin/phrases/update.ejs
+++ b/views/admin/phrases/update.ejs
@@ -11,7 +11,7 @@
                 </div>
 
                 <div class="card-body">
-                    <form action="/admin/phrases/<%= phrase.id %>" method="POST">
+                    <form action="/admin/phrases/<%= phrase.id %>" method="POST" enctype="multipart/form-data">
                         <div class="form-group">
                             <label for="text">Frase <span class="text-danger">*</span></label>
                             <!-- <input type="text" class="form-control" > -->
@@ -22,7 +22,7 @@
                             <div class="input-group-prepend">
                                 <label class="input-group-text" for="quotedById">Citatato da ...&nbsp;<span class="text-danger">*</span></label>
                             </div>
-                            <select class="custom-select" name="quotedById" id="quotedById" onchange="checkValue(this.value)">
+                            <select class="custom-select" name="quotedById" id="quotedById">
                                 <option value="" selected>Nessuno ...</option>
                                 <% quotedById.forEach(person => { %>
                                     <!-- aggiungere l'immagine della persona !!-->
@@ -51,30 +51,89 @@
                         <!-- slider "Utilizzare l'immagine relativa alla persona", se si switcha input type file.hidden = false; -->
 
 
+
+
+
+
+
+
                         <div class="input-group mb-3">
                             <div class="input-group-prepend">
                                 <span class="input-group-text" id="inputFile"><i class="fas fa-upload"></i></span>
                             </div>
                             <div class="custom-file">
-                                <input type="file" class="custom-file-input" name="phraseImage" id="phraseImage" aria-describedby="inputFile">
-                                <label class="custom-file-label" for="phraseImage">Selezione l'immagine</label>
-                            </div>
-                        </div>
-                        <!-- aggiungere il nome del file caricato -->
-
-
-                        <div class="input-group">
-                            <div class="custom-control custom-switch">
-                                <input type="checkbox" class="custom-control-input" id="statusSwitch" name="isFinished" data-status="<%= phrase.isFinished %>">
-                                <label class="custom-control-label" for="statusSwitch">Da pubblicare? </label>
+                                <input type="file" class="custom-file-input" name="image" id="image" onchange="checkFile(this)" aria-describedby="inputFile">
+                                <label class="custom-file-label" for="image">Selezione l'immagine</label>
                             </div>
                         </div>
 
+                        <div class="col-12 d-flex justify-content-center align-items-end">
+                            <div class="col-xl-10 col-lg-12 mb-3">
+                                <img id="imagePreview" src="#" style="width: 100%;" hidden>
+                            </div>
 
-
-                        <div class="form-group mt-5 mb-0">
-                            <span class="text-danger">*</span> È obbligatorio!
+                            <i class="fas fa-trash text-primary fa-2x mb-3" id="btnDeleteImage" onclick="deleteImage()" hidden></i>
                         </div>
+
+
+
+
+
+
+
+
+
+                        <% if (phrase.img && phrase.img !== '') { %>
+
+                            <div class="col-12 d-flex justify-content-center align-items-end">
+                                <div class="col-xl-10 col-lg-12 mb-3">
+                                    <img src="<%= phrase.img %>" style="width: 100%;" id="oldImg">
+                                </div>
+
+                                <button type="submit" style="background-color: transparent; border: none;" id="trashOldImg">
+                                        <i class="fas fa-trash text-primary fa-2x mb-3"></i>
+                                    </button>
+
+                            </div>
+
+
+                            <% } else { %>
+
+                                <!-- <div class="input-group mb-3">
+                                    <div class="input-group-prepend">
+                                        <span class="input-group-text" id="inputFile"><i class="fas fa-upload"></i></span>
+                                    </div>
+                                    <div class="custom-file">
+                                        <input type="file" class="custom-file-input" name="image" id="image" onchange="checkFile(this)" aria-describedby="inputFile">
+                                        <label class="custom-file-label" for="image">Selezione l'immagine</label>
+                                    </div>
+                                </div>
+
+                                <div class="col-12 d-flex justify-content-center align-items-end">
+                                    <div class="col-xl-10 col-lg-12 mb-3">
+                                        <img id="imagePreview" src="#" style="width: 100%;" hidden>
+                                    </div>
+
+                                    <i class="fas fa-trash text-primary fa-2x mb-3" id="btnDeleteImage" onclick="deleteImage()" hidden></i>
+                                </div> -->
+                                <% } %>
+
+
+
+
+
+                                    <div class="input-group">
+                                        <div class="custom-control custom-switch">
+                                            <input type="checkbox" class="custom-control-input" id="statusSwitch" name="isFinished" data-status="<%= phrase.isFinished %>">
+                                            <label class="custom-control-label" for="statusSwitch">Da pubblicare? </label>
+                                        </div>
+                                    </div>
+
+
+
+                                    <div class="form-group mt-5 mb-0">
+                                        <span class="text-danger">*</span> È obbligatorio!
+                                    </div>
 
 
 
@@ -99,5 +158,7 @@
                 statusSwitch.setAttributeNode(attr)
             }
         </script>
+
+        <script src="/js/admin/imageLoad.js"></script>
 
         <%- include('./../partials/footer') %>
