--- a/views/admin/phrases/create.ejs
+++ b/views/admin/phrases/create.ejs
@@ -28,16 +28,8 @@
                                     <!-- aggiungere l'immagine della persona !!-->
                                     <option value="<%= person.id %>"><%= person.name %> <%= person.surname %> <!-- | <i class="fas fa-info-circle"></i> --></option>
                                 <% }); %>
-                                <!-- <option value='new'>Crea uno nuovo (sei proprio sicuro di voler creare un modal???)</option> -->
                             </select>
 
-                            <!-- <script>
-                                const checkValue = param => {
-                                    if (param === 'new') {
-                                        console.log(param + 'opening modal ...')
-                                    }
-                                }
-                            </script> -->
                         </div>
 
                         <!-- <div class="form-group col-md-6">
@@ -81,8 +73,10 @@
                 </div>
                 <div class="card-footer">
                     <div id="input-group">
-                        <button type="submit" class="btn btn-primary"><i class="fas fa-check"></i> | Conferma creazione</button>
-                        <!-- <button type="submit" class="btn btn-dark mb-2"><i class="far fa-save"></i> | Salva come bozza</button> -->
+                        <button type="submit" class="btn btn-primary mb-2"><i class="fas fa-check"></i> | Conferma creazione</button>
+                        <a href="/admin/phrases">
+                            <button type="button" class="btn btn-dark mb-2"><i class="fas fa-history"></i> | Annulla</button>
+                        </a>
                     </div>
                     </form>
                 </div>
@@ -91,6 +85,6 @@
 
         </div>
 
-        <script src="/js/admin/imageLoad.js"></script>
+        <script src="/js/admin/crudPhrases.js"></script>
 
         <%- include('./../partials/footer') %>
