init local login/register

--- a/views/public/index.ejs
+++ b/views/public/index.ejs
@@ -16,7 +16,12 @@
 </head>
 
 <body>
-    HOME
+    HOME | Hi
+    <%= name %>
+
+        <form action="/logout?_method=DELETE" method="POST">
+            <button type="submit">Logout</button>
+        </form>
 </body>
 
 </html>
